  splitting the view
- The status bar message shown when a bracket is out of bounds was not
  always being displayed if soft wrap was in use
- Fixed silly behavior in 'Install Plugins' dialog box

+ API Additions

- Support for macros written in other languages (Mike Dillon)
  - Macros.registerHandler(Macros.Handler handler) method
  - Macros.Handler interface has these methods:

    public abstract Macro createMacro(String macroName, String path);
    public abstract void runMacro(View view, Macro macro);
    protected Handler(String name)

  - 'name' is used to key "macro-handler.<name>.label" and
    "macro-handler.<name>.glob" properties.
  - One minor UI addition is that the language a macro is written in,
    along with the full path to the macro file is shown in the status
    bar when the mouse is over a macro's menu item or tool bar button.

* Version 4.0pre5

+ New Features

- ObjectRexx syntax highlighting (George Hovey)

+ Enhancements

- If jEdit runs out of memory while loading a file, it now reports the
  error using the standard I/O error reporting method, instead of just
  dumping an exception in the activity log
- If indent folding is enabled, lines consisting of white space only no
  longer inherit the fold level of the previous line
- QuickNotepad plugin compiled by default
- FAQ updates (John Gellene)
- The "Open in New View" command has been re-added to the file system
  browser right-click menu
- Pressing ENTER in the file system browser no longer closes the
  selected file if 'double click close' is enabled; now, only double-
  and middle-clicks can close open files
- NEWS.txt written
- Updated Pascal syntax highlighting (Barry Carr)
- 'Spaces to Tabs' and 'Tabs to Spaces' now operate on the entire buffer
  if there is no selection (Ollie Rutherfurd)
- 'More accurate syntax highlighting' option is now even more accurate;
  when editing PHP files with very long embedded scripts, you should
  never see the highlighting mess up